# AI-LAB

MyAssistantDemo/: settings.gradle
MyAssistantDemo/app/: build.gradle
MyAssistantDemo/app/src/androidTest/java/com/example/myassistantdemo/: ExampleInstrumentedTest.kt
MyAssistantDemo/app/src/main/: AndroidManifest.xml
MyAssistantDemo/app/src/main/assets/: .gitattributes  DataBinderMapperImpl.java  README.md
MyAssistantDemo/app/src/main/cpp/: CMakeLists.txt  README.md
MyAssistantDemo/app/src/main/cpp/asr/: CMakeLists.txt  wenet.cc
MyAssistantDemo/app/src/main/cpp/asr/cmake/: gflags.cmake  glog.cmake  openfst.cmake
MyAssistantDemo/app/src/main/cpp/asr/post_processor/: CMakeLists.txt  post_processor.cc  post_processor.h
MyAssistantDemo/app/src/main/cpp/asr/text_processor/: CMakeLists.txt  text_processor.cc  text_processor.h  text_processor_c_api.cc  text_token_parser.cc
MyAssistantDemo/app/src/main/cpp/asr/text_utils/: CMakeLists.txt  text_string.cc
MyAssistantDemo/app/src/main/cpp/kws/: CMakeLists.txt  feature_pipeline.cc  feature_pipeline.h  keyword_spotting.cc  wav.h  wekws.cc
MyAssistantDemo/app/src/main/cpp/rtc/: CMakeLists.txt  com_example_myassistantdemo_rtc_AudioProcessJni.h  ns_jni_wrapper.c
MyAssistantDemo/app/src/main/cpp/rtc/agc/: empty.cpp
MyAssistantDemo/app/src/main/java/com/example/myassistantdemo/: DialogActivity.java  MainActivity.java  MyRecognitionService.java  MyVoiceInteractionService.java  MyVoiceInteractionSession.java  MyVoiceInteractionSessionService.java
MyAssistantDemo/app/src/main/java/com/example/myassistantdemo/asr/: AsrJniStub.java  AsrService.java
MyAssistantDemo/app/src/main/java/com/example/myassistantdemo/kws/: KwsJniStub.java  KwsService.java
MyAssistantDemo/app/src/main/java/com/example/myassistantdemo/rtc/: AudioProcessJni.java  BytesTransUtil.java
MyAssistantDemo/app/src/main/java/com/example/myassistantdemo/ui/theme/: Color.kt  Theme.kt  Type.kt
MyAssistantDemo/app/src/main/res/layout/: activity_main.xml  voice_plate.xml
MyAssistantDemo/app/src/main/res/values/: strings.xml  themes.xml
MyAssistantDemo/app/src/main/res/xml/: recognition_service.xml  voice_interaction_service.xml
MyAssistantDemo/app/src/test/java/com/example/myassistantdemo/: ExampleUnitTest.kt
MyAssistantDemo/gradle/: libs.versions.toml
MyAssistantDemo/gradle/wrapper/: gradle-wrapper.properties
